--- a/new.html
+++ b/new.html
@@ -59,7 +59,7 @@
  
  <div >
    <p class="chennai">Chennai Super Kings is a professional cricket franchise based in Chennai, Tamil Nadu, India, that competes in the Indian Premier League. Founded in 2008, the team plays its home matches at the M. A. Chidambaram Stadium in Chennai.
-   <img src="/dhoni.jpg" alt="" class="dhoni">
+   <img src="https://resize.indiatvnews.com/en/resize/newbucket/1200_-/2023/04/PTI04_03_2023_000319B.jpg?hl=en_IN" alt="" class="dhoni">
    
    </p>
    
