--- a/new.html
+++ b/new.html
@@ -17,11 +17,11 @@
  <strong><i>HIT-MAN🏏</i></strong>
 </div>
   
-<p class="epi"> Rohit Sharma's cute quirks on and off the cricket field add a delightful touch to his persona. His playful smile during tense moments and friendly banter with teammates reveal a charming side. Watching him celebrate milestones with a childlike joy, like a six-year-old unwrapping a gift, is heartwarming. <img src="https://wallpapers.com/images/hd/mumbai-indians-stylized-lettering-logo-9y583dm0eo8zc31a.jpg?hl=en_IN" alt="">
+<p class="epi"> Rohit Sharma's cute quirks on and off the cricket field add a delightful touch to his persona. His playful smile during tense moments and friendly banter with teammates reveal a charming side. Watching him celebrate milestones with a childlike joy, like a six-year-old unwrapping a gift, is heartwarming. <img src="https://github.com/Sancode771/Sancode-website/blob/main/IMG_20231124_134203.jpg" alt="">
 
  </p>
  <div class="Rohit">
-<img src="https://images.app.goo.gl/wmyjU8BrL2svvu6Q7" alt="">
+<img src="https://github.com/Sancode771/Sancode-website/blob/main/IMG_20231122_195027.jpg" alt="">
  </div>
  <br>
  <br>
@@ -67,8 +67,8 @@
  <h1>KING KOHLI</h1>
  
  <p class="RCB">Virat Kohli is an Indian international cricketer and the former captain of the Indian national cricket team. He currently represents Royal Challengers Bangalore in the IPL and Delhi in domestic cricket.          
- <img src="https://images.app.goo.gl/X1cHk7wcyzeL1KhKA" alt="" class="photo">
- <img src="https://images.app.goo.gl/AcDX7ge1M8FTR2kK7" alt="" class="photo">
+ <img src="https://github.com/Sancode771/Sancode-website/blob/main/20220908_210700.jpg" alt="" class="photo">
+ <img src="https://github.com/Sancode771/Sancode-website/blob/main/20220908_210700.jpg" alt="" class="photo">
  </p>
  
  
